[package]
name = "photodateorg01"
version = "0.1.0"
authors = ["jp <jpercyasnet@yahoo.com>"]
edition = "2021"
publish = false

[dependencies]
iced = { version = "^0", features = ["debug"] }
rfd = { version = "^0", features = ["xdg-portal"] }
chrono = "^0"
kamadak-exif = "^0"
serde = { version = "^0", features = ["derive"] }
regex = "^0"
